# Exoskeleton

./: .gitignore
Exo/ExoMain/ExoMain/Script/: CMakeLists.txt  Controller.cpp  Controller.h  GeneralFun.h  Makefile  PWM.cpp  PWM.h  PiSocket.h  Recorder.h  Sensor.cpp  Sensor.h  Valve.cpp  Valve.h  common.h  main.cpp
Exo/ExoMain/ExoMain/Script/include/: ADC.hpp  BWFilter.cpp  BWFilter.hpp  Controller.cpp  Controller.h  Controller_Act.cpp  Controller_FSM.cpp  Controller_PID.cpp  Controller_loop.cpp  Displayer.cpp  Displayer.hpp  Encoder.cpp  Encoder.hpp  FFMachine.hpp  FSMachine.cpp  FSMachine.hpp  GeneralFun.h  MinHeap.cpp  MinHeap.h  MovAvgFilt.hpp  PIDCon.cpp  PIDCon.h  PWM.cpp  PWM.h  PiSocket.h  Pin.cpp  Pin.h  Pin.hpp  RecData.hpp  Recorder.cpp  Recorder.hpp  SenBuffer.cpp  SenBuffer.hpp  Sensor.cpp  Sensor.h  Server.hpp  Valve.cpp  Valve.h  ValveCon.cpp  ValveCon.hpp  (+3 more)
Exo/ExoMain/ExoMain/Script/src/: ADC.cpp  Controller.cpp  Controller_PID.cpp  Controller_loop.cpp  Displayer.cpp  Encoder.cpp  FSMachine.cpp  PWM.cpp  Pin.cpp  Sensor.cpp  Server.cpp  Valve.cpp  ValveCon.cpp  common.cpp  main.cpp
ExoArduino/ExoArduino/: ExoArduino.ino  testArduino.ino
ExoGUI/Control_gui/: CMakeLists.txt
ExoGUI/Control_gui/include/: ConnectSetDialog.h  Connector.h  EncoderSetDialog.h  ExoConfigWindow.h  MainWindow.h  TaskSetDialog.h
ExoGUI/Control_gui/src/: ConnectSetDialog.cpp  Connector.cpp  MainWindow.cpp  TaskSetDialog.cpp  main.cpp
ExoGUI/ExoGUI/: Connection.py  Connector.py  DataProcess.py  ExoGUI.py  IP_set.py  Plotter.py  RecSpring.py  SSH_set.py  TestFun.py
ExoPC/: Display.py  Displayer.py  Plotter.py  main.py  main[Conflict].py  setup.py
ExoPi/ExoPi/: Client.py  DataProcess.py  ExoPi.py  PWMGen.py  Recorder.py  SenReader.py  Setting.py  Valve.py  ValveController (1).py  ValveController.py
teensy_control/: PWM_valve.h  Valve.h  i2c_device.h  i2c_driver.h  i2c_driver_wire.cpp  i2c_driver_wire.h  i2c_register_slave.cpp  i2c_register_slave.h  imx_rt1060_i2c_driver.cpp  imx_rt1060_i2c_driver.h  teensy_control.ino
